# bashbuddy

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test.py
bashbuddy/: __main__.py  agent.py  config.py
bashbuddy/tools/: file_tree.py  persistent_bash.py
tests/tools/: test_file_tree.py
