[tool.poetry]
name = "bashbuddy"
version = "0.2.1"
description = "Hook an LLM up to a Bash terminal"
authors = ["Omegastick <isaac@poulton.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bashbuddy"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.123"
typer = "^0.7.0"
platformdirs = "^3.2.0"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bashbuddy = "bashbuddy.__main__:app"